finally fixed whitespace

--- a/src/GreenIntro.css
+++ b/src/GreenIntro.css
@@ -4,5 +4,6 @@
 
 .mainSec {
     background-color: "rgb(141, 223, 18)" ;
-     padding: "150px"
+     padding: "150px";
+     display: grid;
 }
