--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
+
 body {
   margin: 0 !important;
+  padding: 0;
+  width: 100%;
+  overflow-x: hidden;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -14,9 +18,10 @@ code {
     monospace;
 }
 
-*{
-  margin: 0;
-  padding: 0;
-  overflow: auto;
-  
- }
+.container-fluid{
+  padding-left: 0rem;
+  padding-right: 0rem;
+  overflow: hidden;
+}
+
+ 
